<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="description">
        Данная программа поможет рассчитать ОСАГО для вашего автомобиля
    </string>

    <string name="greetings">
        Здравствуйте
    </string>

    <string name="aboutCarTitle">
        О вашем транспортном средстве
    </string>

    <string name="aboutCarDescript">
        Расскажите поподробнее о вашем транспортном средстве
    </string>

    <string name="carPower">
        Мощность ТС
    </string>

    <string name="carType">
        Тип ТС
    </string>

    <string-array name="typeCarArray">
        <item>Мотоциклы, мопеды и легкие квадроциклы (Категория "A", "M")</item>
        <item>Легковые и грузовые автомобили (Категория "B", "BE")</item>
    </string-array>

    <string name="personTitle">
        О собственнике автомобиля
    </string>

    <string name="personTitleDescript">
        Расскажите поподробнее о Вас
    </string>

    <string name="personAge">
        Возраст
    </string>

    <string name="personPlace">
        Место жительства
    </string>

    <string name="personDateReleaseDL">
        Дата выдачи ВУ
    </string>

    <string name="personKBM">
        Коэффицент КБМ
    </string>

    <string name="insuranceTitle">
        О страховых ограничениях
    </string>

    <string name="insuranceDescrip">
        Расскажите о особенностях вашего страхового договора
    </string>

    <string name="insuranceUsePeriod">
        Период использования ТС
    </string>

    <string name="insuranceUsePerson">
        Ограничения по количеству водителей
    </string>

    <string name="newPersonTitle">
        Добавление нового водителя
    </string>

    <string name="newPersonDescrip">
        Необходимо добавить еще одного водителя в страховой договор?
    </string>

    <string name="newPersonAgree">
        Да, я буду вносить еще одного водителя в страховой полис
    </string>

    <string name="newPersonDisagree">
        Нет, я собираюсь использовать ТС самостоятельно
    </string>

    <string name="resultTitle">
        Итог
    </string>

    <string name="resultDiscript">
        Итоговая цена страхового договора примерно равна:
    </string>

    <string name="result">

    </string>

    <string-array name="personPlaceSpinner">
        <item>Республика Адыгея (Адыгея)</item>
        <item>Республика Алтай</item>
        <item>Республика Башкортостан</item>
        <item>Республика Бурятия</item>
        <item>Республика Дагестан</item>
        <item>Республика Ингушетия</item>
        <item>Республика Кабардино-Балкарская</item>
        <item>Республика Калмыкия</item>
        <item>Республика Карелия</item>
        <item>Республика Коми</item>
        <item>Республика Крым</item>
        <item>Республика Марий Эл</item>
        <item>Республика Мордовия</item>
        <item>Республика Саха (Якутия)</item>
        <item>Республика Северная Осетия — Алания</item>
        <item>Республика Татарстан</item>
        <item>Республика Тыва</item>
        <item>Республика Удмуртская</item>
        <item>Республика Хакасия</item>
        <item>Республика Чечня</item>
        <item>Республика Чувашия</item>
        <item>Алтайский край</item>
        <item>Забайкальский край</item>
        <item>Камчатский край</item>
        <item>Краснодарский край</item>
        <item>Красноярский край</item>
        <item>Пермский край</item>
        <item>Приморский край</item>
        <item>Ставропольский край</item>
        <item>Хабаровский край</item>
        <item>Амурская область</item>
        <item>Архангельская область</item>
        <item>Астраханская область</item>
        <item>Белгородская область</item>
        <item>Брянская область</item>
        <item>Владимирская область</item>
        <item>Волгоградская область</item>
        <item>Вологодская область</item>
        <item>Воронежская область</item>
        <item>Ивановская область</item>
        <item>Иркутская область</item>
        <item>Калининградская область</item>
        <item>Калужская область</item>
        <item>Кемеровская — Кузбасс область</item>
        <item>Кировская область</item>
        <item>Костромская область</item>
        <item>Курганская область</item>
        <item>Курская область</item>
        <item>Липецкая область</item>
        <item>Магаданская область</item>
        <item>Мурманская область</item>
        <item>Нижегородская область</item>
        <item>Новгородская область</item>
        <item>Новосибирская область</item>
        <item>Омская область</item>
        <item>Оренбургская область</item>
        <item>Орловская область</item>
        <item>Пензенская область</item>
        <item>Псковская область</item>
        <item>Ростовская область</item>
        <item>Рязанская область</item>
        <item>Самарская область</item>
        <item>Саратовская область</item>
        <item>Балаково, Балашов, Вольск область</item>
        <item>Сахалинская область</item>
        <item>Свердловская область</item>
        <item>Смоленская область</item>
        <item>Тамбовская область</item>
        <item>Тверская область</item>
        <item>Томская область</item>
        <item>Тульская область</item>
        <item>Тюменская область</item>
        <item>Ульяновская область</item>
        <item>Челябинская область</item>
        <item>Ярославская область</item>
        <item>Еврейская область</item>
        <item>Ненецкий автономный округ</item>
        <item>Ханты-Мансийский — Югра автономный округ</item>
        <item>Чукотский автономный округ</item>
        <item>Ямало-Ненецкий автономный округ</item>
        <item>Байконур автономный округ</item>
    </string-array>

    <string-array name="personConcrPlaceSpinner">

    </string-array>
</resources>